--- a/app/src/main/res/layout/recycler_item_edit.xml
+++ b/app/src/main/res/layout/recycler_item_edit.xml
@@ -12,26 +12,56 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_baseline_edit_note_50" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/write_text"
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barrier_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="end"
+        app:constraint_referenced_ids="edit_image_view" />
+
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/write_text_header"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:maxLines="3"
+        android:singleLine="false"
         android:text="@string/item_edit_header"
         android:textColor="@color/purple_700"
         android:textSize="25sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/edit_image_view"
+        app:layout_constraintBottom_toTopOf="@+id/write_text_descr"
         app:layout_constraintEnd_toStartOf="@+id/up_item"
-        app:layout_constraintStart_toEndOf="@+id/edit_image_view"
-        app:layout_constraintTop_toTopOf="@+id/edit_image_view" />
+        app:layout_constraintStart_toEndOf="@+id/barrier_text"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/write_text_descr"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/item_edit_header"
+        android:textColor="@color/purple_200"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/down_item"
+        app:layout_constraintStart_toEndOf="@+id/barrier_text"
+        app:layout_constraintTop_toBottomOf="@+id/write_text_header" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/save_item"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_baseline_save_24" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/add_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
-        app:layout_constraintBottom_toTopOf="@id/delete_item"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/save_item"
         app:srcCompat="@drawable/ic_baseline_add_24" />
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -39,8 +69,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/add_item"
         app:srcCompat="@drawable/ic_baseline_delete_outline_24" />
 
     <androidx.constraintlayout.widget.Barrier
